add 06-09 post,modi style

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
 title:         一周一译
-description:    "Minimal Jekyll theme for storytellers"
+description:    一周翻译一篇英语文章，对过去岁月最好的纪念
 
 # Author
 author:
